--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,8 @@ npm-debug.log
 yarn-error.log
 .env
 package-lock.json
+
+app/Console/Commands/
+app/Providers/QuestionServiceProvider.php
+app/Service/questionService.php
+storage/debugbar/
